Refactor VaultService to stream input directly, track progress, and compute SHA-256 hash while saving to GridFS